feat: add culture page and update navigation
- Added new culture page
- Updated navigation links
- Updated history page content
- Updated pastor page content
- Updated index page content

--- a/src/pages/homes/history.astro
+++ b/src/pages/homes/history.astro
@@ -40,7 +40,8 @@ const metadata = {
         </Fragment>
 
         <Fragment slot="subtitle">
-            เรื่องราวของศาสนาจารย์ ธิคุณ ภาพเสน่ห์และศาสนาจารย์กรรฐิมา ภาพเสน่ห์ <span class="font-semibold"></span>
+            เรื่องราวของศาสนาจารย์ ธิคุณ ภาพเสน่ห์และศาสนาจารย์กรรฐิมา ภาพเสน่ห์         
+            <span class="font-semibold">ผู้ก่อตั้งองค์กรคริสตจักรเมล็ดพันธุ์</span>
         </Fragment>
 
         <Fragment slot="image">
@@ -56,14 +57,14 @@ const metadata = {
 
     <!-- Features2 Widget ************** -->
 
-    <!-- <Features2
-    title="About us"
-    subtitle="We believe in the magic of turning dreams into stunning realities. Founded by passionate developers with a shared vision, we set out to simplify the website creation process. Our templates bring together the innovation of Astro 5.0 and the versatility of Tailwind CSS, enabling you to express your unique brand identity like never before."
+    <Features2
+    title="ประวัติองค์คริสตจักรเมล็ดพันธุ์กรุงเทพ"
+    subtitle="เริ่มต้นจากสมาชิกเพียง 4 คน ที่รวมตัวกันด้วยความรักและความเชื่อในพระเจ้า และเติบโตขึ้นเป็น 30 คนภายในเวลาเพียง 2 ปี 90% ของสมาชิกเป็นวัยรุ่นที่มีอายุเฉลี่ยเพียง 22.5 ปี ทำให้คริสตจักรแห่งนี้เป็นคริสตจักรของคนรุ่นใหม่ ที่เต็มไปด้วยพลังและความกระตือรือร้นในการรับใช้พระเจ้า"
   >
     <Fragment slot="bg">
       <div class="absolute inset-0 bg-blue-50 dark:bg-transparent"></div>
     </Fragment>
-  </Features2> -->
+  </Features2>
 
     <!-- Stats Widget ****************** -->
 
