--- a/src/pages/homes/pastor.astro
+++ b/src/pages/homes/pastor.astro
@@ -48,8 +48,7 @@ const metadata = {
         actions={[{ variant: 'primary', text: 'About me', href: '#about' }]}
     >
         <Fragment slot="subtitle">
-            ผู้ที่ได้รับการทรงเรียกให้รับใช้พระเจ้า และได้นำประสบการณ์กว่า 14 ปี
-            ในด้านการตลาดมาสนับสนุนพันธกิจของคริสตจักร ด้วยความเชี่ยวชาญด้าน การสร้างแบรนด์ การสื่อสาร และการจัดอีเวนต์
+        update coming Soon
         </Fragment>
     </Hero>
 
@@ -59,30 +58,30 @@ const metadata = {
         id="about"
         columns={3}
         items={[
-            {
-                icon: 'tabler:brand-dribbble',
-                callToAction: {
-                    target: '_blank',
-                    text: 'Dribbble',
-                    href: '#',
-                },
-            },
-            {
-                icon: 'tabler:brand-behance',
-                callToAction: {
-                    target: '_blank',
-                    text: 'Behance',
-                    href: '#',
-                },
-            },
-            {
-                icon: 'tabler:brand-pinterest',
-                callToAction: {
-                    target: '_blank',
-                    text: 'Pinterest',
-                    href: '#',
-                },
-            },
+            // {
+            //     icon: 'tabler:brand-dribbble',
+            //     callToAction: {
+            //         target: '_blank',
+            //         text: 'Dribbble',
+            //         href: '#',
+            //     },
+            // },
+            // {
+            //     icon: 'tabler:brand-behance',
+            //     callToAction: {
+            //         target: '_blank',
+            //         text: 'Behance',
+            //         href: '#',
+            //     },
+            // },
+            // {
+            //     icon: 'tabler:brand-pinterest',
+            //     callToAction: {
+            //         target: '_blank',
+            //         text: 'Pinterest',
+            //         href: '#',
+            //     },
+            // },
         ]}
         image={{
             src: '~/assets/images/pastor.jpg',
@@ -92,12 +91,7 @@ const metadata = {
     >
         <Fragment slot="content">
             <h2 class="mb-2 text-2xl font-bold tracking-tight dark:text-white sm:text-3xl">About me</h2>
-            <p>
-                ผมเป็นคริสเตียนที่มีความเชื่อในพระเจ้า และมีความมุ่งมั่นที่จะเปลี่ยนแปลงประเทศไทยให้เป็นประเทศคริสเตียน
-            </p>
-            <br />
-            <p>ที่มีความเชื่อในพระเจ้า และมีความมุ่งมั่นที่จะเปลี่ยนแปลงประเทศไทยให้เป็นประเทศคริสเตียน</p>
-            <br />
+            update coming Soon
             <p></p>
         </Fragment>
 
@@ -114,29 +108,29 @@ const metadata = {
         items={[
             {
                 title: 'ศิยาภิบาล <br /> <span class="font-normal">คริสตจักรเมล็ดพันธ์กรุงเทพ</span> <br /> <span class="text-sm font-normal">2021 - Present</span>',
-                description: `Collaborate with clients to understand design requirements and objectives. <br /> Develop branding solutions, including logos, color palettes, and brand guidelines. <br /> Design marketing materials such as brochures, posters, and digital assets. <br /> Create visually appealing user interfaces for websites and applications.`,
+                description: ``,
                 icon: 'tabler:briefcase',
             },
-            {
-                title: 'วิทยากรการตลาด <br /> <span class="font-normal">สมาคมธรุกิจคริสเตียนแห่งประเทศไทย</span> <br /> <span class="text-sm font-normal">2021 - Present</span>',
-                description: `Collaborate with clients to understand design requirements and objectives. <br /> Develop branding solutions, including logos, color palettes, and brand guidelines. <br /> Design marketing materials such as brochures, posters, and digital assets. <br /> Create visually appealing user interfaces for websites and applications.`,
-                icon: 'tabler:briefcase',
-            },
+            // {
+            //     title: 'วิทยากรการตลาด <br /> <span class="font-normal">สมาคมธรุกิจคริสเตียนแห่งประเทศไทย</span> <br /> <span class="text-sm font-normal">2021 - Present</span>',
+            //     description: `Collaborate with clients to understand design requirements and objectives. <br /> Develop branding solutions, including logos, color palettes, and brand guidelines. <br /> Design marketing materials such as brochures, posters, and digital assets. <br /> Create visually appealing user interfaces for websites and applications.`,
+            //     icon: 'tabler:briefcase',
+            // },
             {
                 title: 'ศิยาภิบาล <br /> <span class="font-normal">คริสตจักรเมล็ดพันธ์ภูเก็ตซิตี้</span> <br /> <span class="text-sm font-normal">2018 - 2021</span>',
-                description: `Assisted senior designers in creating design concepts and visual assets. <br /> Contributed to the development of brand identities and marketing collateral. <br /> Collaborated with the marketing team to ensure consistent design across campaigns. <br /> Gained hands-on experience in various design software and tools.`,
+                description: ``,
                 icon: 'tabler:briefcase',
             },
-            {
-                title: 'CEO <br /> <span class="font-normal">Inspire Marketing</span> <br /> <span class="text-sm font-normal">2018 - 2021</span>',
-                description: `Assisted senior designers in creating design concepts and visual assets. <br /> Contributed to the development of brand identities and marketing collateral. <br /> Collaborated with the marketing team to ensure consistent design across campaigns. <br /> Gained hands-on experience in various design software and tools.`,
-                icon: 'tabler:briefcase',
-            },
-            {
-                title: 'Onwner and Maneger Event <br /> <span class="font-normal">Mayucos</span> <br /> <span class="text-sm font-normal">2018 - 2021</span>',
-                description: `Assisted senior designers in creating design concepts and visual assets. <br /> Contributed to the development of brand identities and marketing collateral. <br /> Collaborated with the marketing team to ensure consistent design across campaigns. <br /> Gained hands-on experience in various design software and tools.`,
-                icon: 'tabler:briefcase',
-            },
+            // {
+            //     title: 'CEO <br /> <span class="font-normal">Inspire Marketing</span> <br /> <span class="text-sm font-normal">2018 - 2021</span>',
+            //     description: `Assisted senior designers in creating design concepts and visual assets. <br /> Contributed to the development of brand identities and marketing collateral. <br /> Collaborated with the marketing team to ensure consistent design across campaigns. <br /> Gained hands-on experience in various design software and tools.`,
+            //     icon: 'tabler:briefcase',
+            // },
+            // {
+            //     title: 'Onwner and Maneger Event <br /> <span class="font-normal">Mayucos</span> <br /> <span class="text-sm font-normal">2018 - 2021</span>',
+            //     description: `Assisted senior designers in creating design concepts and visual assets. <br /> Contributed to the development of brand identities and marketing collateral. <br /> Collaborated with the marketing team to ensure consistent design across campaigns. <br /> Gained hands-on experience in various design software and tools.`,
+            //     icon: 'tabler:briefcase',
+            // },
         ]}
         classes={{ container: 'max-w-3xl' }}
     />
