chore(assets): update images and config
- Updated image dimensions in config.yaml
- Replaced mobile app image
- Added new mobile app image
- Added SeedApp.png
- Removed old mobile app image

--- a/src/pages/homes/mobile-app.astro
+++ b/src/pages/homes/mobile-app.astro
@@ -52,7 +52,7 @@ const metadata = {
     <Hero2
         tagline="Mobile App"
         image={{
-            src: '~/assets/images/seedChruchApp.jpeg',
+            src: '~/assets/images/SeedApp-removebg-preview.png',
             alt: 'seedChruchApp',
         }}
     >
