--- a/src/components/saweria/Navbar.astro
+++ b/src/components/saweria/Navbar.astro
@@ -81,7 +81,8 @@ const ourChruch = 'https://www.seedchurch-thailand.com/'
                                     </li>
                                     <li>
                                         <a class="dropdown-item" href="https://www.seedchurch-thailand.com/leadership"
-                                            >Leadership</a>
+                                            >Leadership</a
+                                        >
                                     </li>
                                 </ul>
                             </li>
