--- a/src/pages/homes/history.astro
+++ b/src/pages/homes/history.astro
@@ -14,7 +14,7 @@ import Brands from '~/components/widgets/Brands.astro'
 import { YouTube } from 'astro-embed'
 
 const metadata = {
-  title: 'ประวัติ',
+    title: 'ประวัติ',
 }
 ---
 
@@ -40,7 +40,7 @@ const metadata = {
         </Fragment>
 
         <Fragment slot="subtitle">
-            เรื่องราวของศาสนาจารย์ ธิคุณ ภาพเสน่ห์และศาสนาจารย์กรรฐิมา ภาพเสน่ห์         
+            เรื่องราวของศาสนาจารย์ ธิคุณ ภาพเสน่ห์และศาสนาจารย์กรรฐิมา ภาพเสน่ห์
             <span class="font-semibold">ผู้ก่อตั้งองค์กรคริสตจักรเมล็ดพันธุ์</span>
         </Fragment>
 
@@ -57,14 +57,11 @@ const metadata = {
 
     <!-- Features2 Widget ************** -->
 
-    <Features2
-    title="ประวัติองค์คริสตจักรเมล็ดพันธุ์กรุงเทพ"
-    subtitle="Coming soon"
-  >
-    <Fragment slot="bg">
-      <div class="absolute inset-0 bg-blue-50 dark:bg-transparent"></div>
-    </Fragment>
-  </Features2>
+    <Features2 title="ประวัติองค์คริสตจักรเมล็ดพันธุ์กรุงเทพ" subtitle="Coming soon">
+        <Fragment slot="bg">
+            <div class="absolute inset-0 bg-blue-50 dark:bg-transparent"></div>
+        </Fragment>
+    </Features2>
 
     <!-- Stats Widget ****************** -->
 
