--- a/src/pages/homes/pastor.astro
+++ b/src/pages/homes/pastor.astro
@@ -47,9 +47,7 @@ const metadata = {
         tagline="ศิยาภิบาลคริสตเมล็ดพันธุ์"
         actions={[{ variant: 'primary', text: 'About me', href: '#about' }]}
     >
-        <Fragment slot="subtitle">
-        update coming Soon
-        </Fragment>
+        <Fragment slot="subtitle"> update coming Soon </Fragment>
     </Hero>
 
     <!-- Content Widget **************** -->
@@ -279,11 +277,7 @@ const metadata = {
 
     <!-- BlogLatestPost Widget **************** -->
 
-    <BlogLatestPosts
-        id="blog"
-        title="อ่านบทความ"
-        information={``}
-    >
+    <BlogLatestPosts id="blog" title="อ่านบทความ" information={``}>
         <Fragment slot="bg">
             <div class="absolute inset-0 bg-blue-50 dark:bg-transparent"></div>
         </Fragment>
