--- a/src/pages/lab.astro
+++ b/src/pages/lab.astro
@@ -1,9 +1,9 @@
 ---
-import ExitAnimation from "@/components/motion/ExitAnimation";
-import MotionPath from "@/components/motion/MotionPath";
+import ExitAnimation from '@/components/motion/ExitAnimation'
+import MotionPath from '@/components/motion/MotionPath'
 ---
 
 <div class="container">
     <!-- <ExitAnimation /client:only="recat"/> -->
-    <MotionPath client:only="recat"/>
+    <MotionPath client:only="recat" />
 </div>
