--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -42,7 +42,7 @@ const { language, textDirection } = I18N
         <script src="https://cdn.jsdelivr.net/npm/pagedone@1.2.2/src/js/pagedone.js"></script>
     </head>
 
-    <body class={"bg-page tracking-tight text-default antialiased"}>
+    <body class={'bg-page tracking-tight text-default antialiased'}>
         <slot />
 
         <BasicScripts />
